# tari-launchpad

./: Cargo.toml  README.md  rustfmt.toml
cli/: Cargo.toml
cli/src/: dashboard.rs  events.rs  lib.rs  main.rs  onboarding.rs  state.rs  supervisor.rs
cli/src/component/: containers_scene.rs  elements.rs  header.rs  labeled_input.rs  logo.rs  main_view.rs  mod.rs  mode.rs  motion.rs  tabs.rs
cli/src/component/expert/: mod.rs
cli/src/component/header/: logo.rs  mod.rs  mode.rs
cli/src/component/normal/: hint.rs  mod.rs
cli/src/component/normal/base_node/: base_node.rs  mod.rs
cli/src/component/normal/mining/: amount.rs  chrono_button.rs  merged_mining.rs  mod.rs  status_badge.rs  tari_mining.rs  tip.rs
cli/src/component/normal/wallet/: mod.rs  password.rs
cli/src/component/onboarding/: message.rs  mod.rs
cli/src/component/scene/: containers.rs  wallet.rs
cli/src/component/settings/: base_node.rs  docker.rs  logs.rs  mining.rs  mod.rs  security.rs  wallet.rs
cli/src/component/widgets/: label.rs  labeled_input.rs  mod.rs  separator.rs
cli/src/state/: bus.rs  focus.rs  launchpad.rs  mining.rs  mod.rs  onboarding.rs
core/bus/: Cargo.toml
core/bus/src/: lib.rs
core/engine/: Cargo.toml
core/engine/src/: config_reader.rs  container.rs  images.rs  lib.rs  scope.rs  status.rs  supervisor.rs  types.rs
core/mockup/: Cargo.toml
core/protocol/: Cargo.toml
core/protocol/src/: app.rs
core/tact/: Cargo.toml
core/tact/src/: action.rs  actor.rs  address.rs  context.rs  handler.rs  joint.rs  (+5 more)
libs/protocol/: Cargo.toml
ui/backend/: Cargo.toml
(+63 files in other folders)
