[package]
name = "tari-lp-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
crossterm = "0.26.1"
rust_decimal = "1.29.1"
strum = { version = "0.24.1", features = ["derive"] }
tact = { path = "../core/tact" }
thiserror = "1.0.40"
tokio = "1.27.0"
tui = "0.19.0"
